# yit

./: .gitignore  AI_INSTRUCTIONS.md  LICENSE  README.md  extract_lib.py  install_yit.ps1  pyproject.toml  requirements.txt  server.json  setup_installer.bat  smithery.yaml  test_pip_mpv.py  yit.bat  yit.py
.github/workflows/: publish.yml
src/yit/: __init__.py  __main__.py  cli.py  commands.py  config.py  daemon.py  installer.py  ipc.py  mcp_server.py  storage.py  utils.py
