[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yit-player"
version = "0.1.3"
description = "YouTube in Terminal - Fire-and-Forget Music CLI"
readme = "README.md"
authors = [{name = "Yit Team"}]
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = [
    "yt-dlp>=2023.0.0",
    "py7zr"
]

[project.urls]
"Homepage" = "https://github.com/VijayarajParamasivam/yit"
"Bug Tracker" = "https://github.com/VijayarajParamasivam/yit/issues"

[project.scripts]
yit = "yit:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yit"]
