[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yit-player"
version = "2.0.1"
description = "Fire-and-Forget Music CLI"
readme = "README.md"
authors = [{name = "Yit Team"}]
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "yt-dlp>=2023.0.0",
    "requests"
]

[project.urls]
"Homepage" = "https://github.com/VijayarajParamasivam/yit"
"Bug Tracker" = "https://github.com/VijayarajParamasivam/yit/issues"

[project.scripts]
yit = "yit:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yit"]
